--- a/web/themes/custom/local/scss/components/sidebar.scss
+++ b/web/themes/custom/local/scss/components/sidebar.scss
@@ -27,4 +27,7 @@
         background: none;
         border-bottom: $border-width solid $border-color;
     }
+    #edit-privacy {
+        font-size: 0.9rem;
+    }
 }
