--- a/web/themes/custom/local/scss/typography.scss
+++ b/web/themes/custom/local/scss/typography.scss
@@ -35,7 +35,10 @@ Consolas,
 "Liberation Mono",
 "Courier New",
 monospace;
-$font-family-base: $font-family-sans-serif;
+$font-family-local: "Open Sans",Verdana,Tahoma,"DejaVu Sans",sans-serif;
+$font-family-local-h: "Signika",Arial,Helvetica,"Nimbus Sans L",sans-serif;
+$font-family-local-input: Verdana,Arial,sans-serif;
+$font-family-base: $font-family-local;
 $font-size-base: 1rem; // Assumes the browser default, typically `16px`
 $font-size-lg: 1.25rem;
 $font-size-sm: .875rem;
