--- a/web/themes/custom/local/scss/variables.scss
+++ b/web/themes/custom/local/scss/variables.scss
@@ -4,18 +4,23 @@
 $primary-shade: #A8CF45;
 $primary-light: lighten($primary-shade, 37%);
 $primary-dark: darken($primary-shade, 12%);
-$accent-shade: #3898c6;
+$accent-shade: #291d1f;
 $accent-light: lighten($accent-shade, 37%);
 $accent-dark: darken($accent-shade, 12%);
+$accent-secondary: #4a4a4a;
 // Reassign color vars to semantic color scheme
 $red: #dc3545;
 $yellow: #ffc107;
+$orange: #ff682c;
+$orange2: #ff9300;
 $green: #28a745;
 $cyan: #17a2b8;
+$white: #fff;
 $gray-100: #f8f9fa !default;
 $gray-800: #343a40 !default;
 $gray: #4a4a4a;
 $dark-gray: #333;
+$light-gray: #666;
 $theme-colors: ( primary: $accent-shade, secondary: $primary-shade, success: $green, info: $cyan, warning: $yellow, danger: $red, light: $gray-100, dark: $gray-800);
 $brand-primary: $accent-shade;
 //$brand-success: $green;
@@ -33,10 +38,19 @@ $inverse-bg: $primary-shade;
 // Links
 //
 // Style anchor elements.
+$body-link: $orange;
 $link-color: $accent-shade;
 $link-decoration: none;
 $link-hover-color: $accent-dark;
 $link-hover-decoration: underline;
+$button-background-color: $orange2;
+$button-text-color: $white;
+$button-border-color: darken($button-background-color, 3%);
+$button-background-color-hover: darken($button-background-color, 3%);
+$button2-background-color: $accent-shade;
+$button2-text-color: $white;
+$button2-border-color: darken($button2-background-color, 3%);
+$button2-background-color-hover: darken($button2-background-color, 3%);
 // Comments
 $comment-spacer-x: 1.25em;
 $comment-spacer-y: 1.25em;
