--- a/web/themes/custom/local/scss/import.scss
+++ b/web/themes/custom/local/scss/import.scss
@@ -1,6 +1,6 @@
 /* IMPORTS */
 
-@import url(font-awesome.min.css);
+@import url('https://fonts.googleapis.com/css?family=Libre+Franklin');
 // variables
 @import "variables";
 //bootstrap
