--- a/web/themes/custom/local/scss/typography.scss
+++ b/web/themes/custom/local/scss/typography.scss
@@ -36,7 +36,7 @@ Consolas,
 "Courier New",
 monospace;
 $font-family-local: "Open Sans",Verdana,Tahoma,"DejaVu Sans",sans-serif;
-$font-family-local-h: "Signika",Arial,Helvetica,"Nimbus Sans L",sans-serif;
+$font-family-local-h: "Libre Franklin",Helvetica,Arial,"DejaVu Sans",sans-serif;
 $font-family-local-input: Verdana,Arial,sans-serif;
 $font-family-base: $font-family-local;
 $font-size-base: 1rem; // Assumes the browser default, typically `16px`
@@ -47,9 +47,9 @@ $font-weight-normal: normal;
 $font-weight-bold: bold;
 $font-weight-base: $font-weight-normal;
 $line-height-base: 1.5;
-$font-size-h1: 2.5rem;
-$font-size-h2: 2rem;
-$font-size-h3: 1.75rem;
-$font-size-h4: 1.5rem;
-$font-size-h5: 1.25rem;
+$font-size-h1: 1.5rem;
+$font-size-h2: 1.25rem;
+$font-size-h3: 1rem;
+$font-size-h4: 1rem;
+$font-size-h5: 1rem;
 $font-size-h6: 1rem;
