AB03-14 Container max widths, removed unused scss files.

--- a/web/themes/custom/local/css/style.css
+++ b/web/themes/custom/local/css/style.css
@@ -8380,3 +8380,7 @@ h2 {
   clear: both;
   margin-left: -30px;
   margin-right: -30px; }
+
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1360px; } }
