--- a/web/themes/custom/local/scss/style.scss
+++ b/web/themes/custom/local/scss/style.scss
@@ -350,3 +350,9 @@ h2 {
     margin-left: -30px;
     margin-right: -30px;
 }
+
+@media (min-width: 1200px) {
+    .container {
+        max-width: 1360px;
+    }
+}
