AB03-14 Contact form no longer saves entry in database on submission, adjusted menu hover/active background colors.

--- a/web/themes/custom/local/css/style.css
+++ b/web/themes/custom/local/css/style.css
@@ -6657,7 +6657,7 @@ label[for="edit-i-agree-the-information-contained-is-true-accurate-and-complete-
 #navbar-main.navbar-dark .dropdown-menu .dropdown-item {
   border-bottom: 1px solid #fff; }
   #navbar-main.navbar-dark .dropdown-menu .dropdown-item:hover, #navbar-main.navbar-dark .dropdown-menu .dropdown-item:focus, #navbar-main.navbar-dark .dropdown-menu .dropdown-item.active {
-    background-color: #4a4a4a; }
+    background-color: #872434; }
     #navbar-main.navbar-dark .dropdown-menu .dropdown-item:hover a, #navbar-main.navbar-dark .dropdown-menu .dropdown-item:focus a, #navbar-main.navbar-dark .dropdown-menu .dropdown-item.active a {
       color: #fff; }
   #navbar-main.navbar-dark .dropdown-menu .dropdown-item:last-child {
@@ -6698,7 +6698,7 @@ label[for="edit-i-agree-the-information-contained-is-true-accurate-and-complete-
     color: #fff; }
 
 .dropdown-toggle-split {
-  padding: 15px 20px 0 0; }
+  padding: 15px 20px 15px 0; }
 
 .navbar-toggler-icon:after {
   color: #fff;
@@ -6721,10 +6721,12 @@ label[for="edit-i-agree-the-information-contained-is-true-accurate-and-complete-
         break-inside: avoid-column; }
   .dropdown:hover > .dropdown-menu {
     display: block; }
-  .navbar-dark .navbar-nav li.dropdown.show {
-    background-color: #fff; }
-    .navbar-dark .navbar-nav li.dropdown.show > a {
-      color: #333; }
+  .navbar-dark .navbar-nav li.dropdown.show,
+  .navbar-dark .navbar-nav li.nav-item:hover {
+    background-color: #872434; }
+    .navbar-dark .navbar-nav li.dropdown.show > a,
+    .navbar-dark .navbar-nav li.nav-item:hover > a {
+      color: #fff; }
   #navbar-main.navbar-dark .dropdown-menu .dropdown-item.bottom {
     border-bottom: 0; } }
 
@@ -8134,7 +8136,7 @@ a:hover {
 /* COLORS 
 --------------------------------------------------*/
 a {
-  color: #ff682c;
+  color: #872434;
   transition: 0.1s ease-out; }
   a.webform-element-help {
     color: #fff;
@@ -8352,16 +8354,16 @@ h2 {
   padding: 0 0 1rem 1rem; }
 
 .btn-primary {
-  background-color: #ff9300;
-  border-color: #f08a00;
+  background-color: #872434;
+  border-color: #7b212f;
   color: #fff;
   display: inline-block;
   font-weight: bold;
   padding: 15px 30px;
   text-transform: uppercase; }
   .btn-primary:hover {
-    background-color: #f08a00;
-    border-color: #f08a00; }
+    background-color: #7b212f;
+    border-color: #7b212f; }
 
 .btn-secondary {
   background-color: #291d1f;
@@ -8383,4 +8385,4 @@ h2 {
 
 @media (min-width: 1200px) {
   .container {
-    max-width: 1360px; } }
+    max-width: 1365px; } }
