--- a/web/themes/custom/local/css/style.css
+++ b/web/themes/custom/local/css/style.css
@@ -7325,7 +7325,9 @@ input[type="search"] {
 
 /* Footer Bottom Styling. */
 .site-footer__bottom .block {
-  margin: 0.5rem 0; }
+  margin: 0.5rem auto;
+  text-align: center;
+  width: 100%; }
 
 .site-footer__bottom .content {
   padding: 0.5rem 0;
