--- a/web/themes/custom/local/scss/components/page.scss
+++ b/web/themes/custom/local/scss/components/page.scss
@@ -7,12 +7,6 @@
     background-color: $white;
     margin-top: 0;
     padding-top: $spacer;
-
-    h2 {
-        font-size: 1.5rem;
-        font-weight: bold;
-        margin-bottom: 2rem;
-    }
 }
 
 #content > .section {
@@ -95,6 +89,11 @@
                 text-decoration: none;
             }
         }
+    }
+
+    .field--name-field-pager-caption {
+        font-size: 0.85rem;
+        color: $lighter-gray;
     }
 }
 
