--- a/web/themes/custom/local/scss/style.scss
+++ b/web/themes/custom/local/scss/style.scss
@@ -33,6 +33,15 @@ h1 {
     padding: 20px;
 }
 
+h2,
+h3 {
+    line-height: 2.5rem;
+}
+
+h3 {
+    margin: 2rem 0;
+}
+
 a:hover {
     text-decoration: none;
     transition: 0.25s ease-out;
@@ -64,6 +73,10 @@ h1 {
 }
 
 h2 {
+    color: $primary-shade;
+}
+
+h3 {
     color: $primary-shade;
 }
  
